--- a/3.md
+++ b/3.md
@@ -161,3 +161,63 @@ private:
     Singleton &operator = (const Singleton&) = default;
 };
 ```
+
+# 2024/1/8
+# 11. 了解分布式事务吗？
+
+# 12. MySQL 中有哪些索引？有什么特点？
+
+# 13. Redis 常见的数据优化方案你了解吗？
+
+# 14. 事务四大特性（ACID）原子性、一致性、隔离性、持久性
+* 原子性
+* 一致性
+* 隔离性
+* 持久性
+
+# 15. volatile 实现什么能力，怎么实现的？
+可见性，CPU core 分别有自己的 cache，彼此之间不可用，使用 volatile 会强制将 cache 写入主存，和从主存加载数据。  
+禁止指令重排，当一个变量被 volatile 修饰时，编译器和处理器会禁止对其进行指令重排序，从而保证程序的正确性。
+
+# 16. 寻找峰值
+https://leetcode.cn/problems/find-peak-element/
+```cpp
+class Solution {
+public:
+    int findPeakElement(vector<int>& nums) {
+        nums.push_back(-2147483648);
+        for (int i = 0; i + 1 < nums.size(); ++i)
+        {
+            if (i == 0 && nums[i] > nums[i + 1]) return i;
+            else if (i && nums[i] > nums[i - 1] && nums[i] > nums[i + 1]) return i;
+        }
+        return 0;
+    }
+};
+```
+
+# 17. 为什么 MySQL 索引使用 B+ 树而不用 hash 表和 B 树
+
+# 18. HTTP 请求和响应报文有哪些主要字段？
+### 请求报文
+* 请求行
+* 请求头
+* 请求体
+
+### 响应报文
+* 状态行
+* 响应头
+* 响应体
+
+# 19. 常见的 HTTP 状态码有哪些
+* 1xx 信息性状态码
+* 2xx 成功状态码
+* 3xx 重定向状态码
+* 4xx 客户端错误状态码
+* 5xx 服务端错误状态码
+
+# 20. 线程与进程的比较或者说区别
+* 调度：线程是调度的基本单位，进程是拥有资源的基本单位
+* 并发性：多个进程可以并发，一个进程内多个线程可以并发
+* 拥有资源：进程是拥有资源的独立单位。线程不拥有资源，但一个进程的多个线程可以共享隶属进程的资源
+* 系统开销：线程开销小
