--- a/4.md
+++ b/4.md
@@ -74,4 +74,58 @@ unordered_set 与 unordered_map 类似，unordered_set 的底层实现通常也是哈希表。uno
 https://leetcode.cn/problems/reverse-nodes-in-k-group/
 
 
-# 14. 
+# 14. 盛水最多的容器
+https://leetcode.cn/problems/container-with-most-water/
+```cpp
+class Solution {
+public:
+    int maxArea(vector<int>& height) {
+        int l = 0, r = height.size() - 1, res = (r - l) * min(height[l], height[r]);
+        while (l < r)
+        {
+            res = max(res, (r - l) * min(height[l], height[r]));
+            if (height[l] < height[r]) l ++;
+            else r --;
+        }
+        return res;
+    }
+};
+```
+
+# 15. Linux 操作过吗？说一说常见的命令和指令？
+
+# 16. 事务四大特性（ACID）原子性、一致性、隔离性、持久性
+* 原子性
+* 一致性
+* 隔离性
+* 一致性
+
+# 17. strcpy 函数和 strncpy 函数的区别？哪个函数更安全？
+函数原型
+```cpp
+char *strcpy(char *strDest, const char *strSrc);
+char *strncpy(char *dest, const char *src, size_t n);
+```
+**strcpy 函数**
+如果 dest 所指的内存空间不够大，可能会造成缓冲溢出的错误情况，在编写时需特别留意，或者用 strncpy() 来取代
+
+**strncpy 函数**
+用来复制源字符串的前 n 个字符，src 和 dest 所指的内存区域不能重叠，且 dest 必须有足够的空间放置 n 个字符
+
+# 18. 什么是内存泄漏，如何检测与避免
+### 内存泄漏
+一般我们常说的内存泄漏是指堆内存的泄漏。堆内存是指程序从堆中分配的，大小任意的内存块，使用完后必须显式释放的内存。应用程序一般使用 malloc、new 等函数从堆中分配到块内存，使用完后，程序必须负责相应的调用 free 或 delete 释放该内存块，否则这块内存就不能再次使用，我们就说这块内存泄漏了。
+
+### 避免内存泄漏的几种方式
+* 计数法：new 或者 molloc，计数 +1，free 或者 delete 计数 -1.程序执行完打印，不为1就泄漏（类似智能指针）
+* 一定要在基类的析构函数声明为虚函数
+* 对象数组的释放一定要用 delete[]
+* 有 new 就有 delete，有 malloc 就有 free
+
+### 检测工具
+Linux：Valgrind工具
+Windows：CRT 库
+
+# 19. 用 C 语言实现 C++ 的继承
+
+# 20. 用过设计模式吗？大致说说？
