--- a/5.md
+++ b/5.md
@@ -100,3 +100,28 @@ public:
     }
 };
 ```
+# 11. 介绍一下几种典型的锁
+### 读写锁
+* 多个读者可以同时进行读
+* 写者必须互斥（只允许一个写者写，也不能读者写者同时进行）
+* 写者优先于读者（一旦有写者，则后续读者必须等待，唤醒时优先考虑写者）
+
+### 互斥锁
+一次只能一个线程拥有互斥锁，其他线程只有等待
+
+互斥锁是在抢锁失败的情况下主动放弃 CPU 进入睡眠状态直到锁的状态改变时再唤醒，而操作系统负责线程调度，为了实现锁的状态发生改变时唤醒阻塞的线程或者进程，需要把锁交给操作系统管理，所以互斥锁在加锁操作时涉及上下文的切换。效率还是可以接收的，加锁的时间大概 100ns 左右。
+
+### 条件变量
+互斥锁一个明显的缺点是他只有两种状态：锁定和非锁定。而条件变量通过允许线程阻塞和等待另一个线程发送信号的方法弥补了互斥锁的不足，他常和互斥锁一起使用，以免出现竞态条件。
+
+### 自旋锁
+如果进线程无法取得锁，进线程不会立刻放弃 CPU 的时间片，而是一直循环尝试获取锁，直到获取为止。如果别的线程长时期占有锁那么自旋锁就是在浪费 CPU 做无用功，但是自旋锁一般应用于加锁时间很短的场景，这个时候效率比较高。
+
+# 12. 高楼扔鸡蛋（经典问题）
+* 暴力法
+* 二分法
+* 根号法
+* 最优解法
+
+# 13. 下一个排列
+
