create 离职申请.txt modify 5.md

--- a/5.md
+++ b/5.md
@@ -124,4 +124,60 @@ public:
 * 最优解法
 
 # 13. 下一个排列
+https://leetcode.cn/problems/next-permutation/
+```cpp
+class Solution {
+public:
+    void nextPermutation(vector<int>& nums) {
+        bool leap = false;
+
+        for (int i = nums.size() - 2; i >= 0; i --)
+        {
+            if (nums[i] >= nums[i + 1]) continue;
+            else
+            {
+                for (int j = nums.size() - 1; j >= i + 1; j --)
+                {
+                    if (nums[i] < nums[j])
+                    {
+                        swap(nums[i], nums[j]);
+                        break;
+                    }
+                }
+                sort(nums.begin() + i + 1, nums.end());
+                leap = true;
+                return ;
+            }
+        }
+
+        if (leap == false) sort(nums.begin(), nums.end());
+    }
+};
+```
+
+# 14. N 个强盗分配 M 个金币，求方案使得自己分配最多
+倒推
+
+# 15. 用户密码明文存吗？
+一般数据库存的都是经过加密后的密码，前端将明文密码或者经过某些编码方式加密过的密码传到后端后，后端再进行加密，将之加密为密文，然后把密文存进数据库中的。
+
+# 16. 火枪手决斗，谁活下来的概率大？
+先弄甲，再根据活没活分类讨论
+
+# 17. 先手必胜的问题
+巴什博弈
+
+# 18. TCP 和 UDP 的使用场景
+TCP 协议可靠性较高，适用于数据传输的可靠性要求较高的场景，例如传输大文件或需要确保所有数据都能到达接收端的应用，如 FTP、HTTP 等应用程序。
+
+UDP 协议则适用于对实时性要求较高的场景，例如音视频流媒体、在线游戏等。
+
+# 19. 内存交换和覆盖有什么区别
+交换技术主要是在不同进程（或作业）之间进行，而覆盖则用于同一程序或进程中
+
+# 20. 智能指针的作用
+* shared_ptr
+* unique_ptr
+* weak_ptr
+* auto_ptr
 
