modify 6.md create 7.md

--- a/6.md
+++ b/6.md
@@ -135,3 +135,38 @@ public:
 直接操作缓存能够承受的请求是远远大于直接访问数据库的，所以我们可以考虑把数据库中的部分数据转移到缓存中去，这样用户的一部分会直接到缓存这里而不用经过数据库。
 
 # 20. 所有非空子串的权值和
+https://www.nowcoder.com/questionTerminal/33332352abb642cf9b77eac1f7eeb720
+```cpp
+#include <iostream>
+#include <cstring>
+
+using namespace std;
+
+const int N = 2010;
+
+char s[N];
+int cnt = 0, sa[N], sb[N];
+
+int main() {
+    
+    cin >> s + 1;
+    int n = strlen(s + 1);
+
+    for (int i = 1; i <= n; i ++) {
+        if ((i & 1 && s[i] != '1') || (!(i & 1) && s[i] != '0')) sa[i] = 1;
+        if ((i & 1 && s[i] != '0') || (!(i & 1) && s[i] != '1')) sb[i] = 1;
+        sa[i] += sa[i - 1], sb[i] += sb[i - 1];
+    }
+
+    for (int i = 2; i <= n; i ++) {
+        for (int j = i; j <= n; j ++) {
+            cnt += min(sa[j] - sa[j - i], sb[j] - sb[j - i]);
+        }
+    }
+
+    cout << cnt << endl;
+
+    return 0;
+}
+// 64 位输出请用 printf(\"%lld\")
+```
