--- a/8.md
+++ b/8.md
@@ -8,4 +8,153 @@
 * 悲观锁：先获取锁，再进行业务操作
 * 乐观锁：先进性业务操作，只在最后实际更新数据时进行检查数据是否被更新过。
 
-# 3. 
+# 2024/1/16
+# 3. 模板类的作用可以介绍下吗？
+C++ 模板类的作用是实现泛型编程，即编写一个通用的类或函数，可以适用于多种不同的数据类型。使用模板类可以避免重复编写相似的代码，提高代码的复用性和可维护性。      
+在 C++ 中，模板类通常由两部分组成：模板声明和模板定义。模板声明指定了模板参数，而模板定义则实现了具体的功能。在使用模板类时，需要为每个要使用的类型提供一个对应的模板参数。
+### 实例
+```cpp
+template <typename T>
+class MyClass {
+public:
+    void setValue(T value) { this->value = value; }
+    T getValue() const { return value; }
+private:
+    T value;
+};
+```
+
+# 4. SQL 中的 NOW() 和 CURRRENT_DATE() 两个函数有什么区别？
+NOW() 命令用于显示当前年份，月份，日期，小时，分钟和秒。        
+CURRENT_DATE() 仅显示当前年份，月份和日期。
+
+# 5. 最长不含重复字符的子字符串
+https://leetcode.cn/problems/zui-chang-bu-han-zhong-fu-zi-fu-de-zi-zi-fu-chuan-lcof/
+```cpp
+class Solution {
+public:
+    int dismantlingAction(string arr) {
+        unordered_map<char, int> mp;
+        int index = 0, res = 0;
+
+        for (int i = 0; i < arr.size(); i ++) {
+            mp[arr[i]] ++;
+            while (mp[arr[i]] > 1) mp[arr[index ++]] --;
+            res = max(res, i - index + 1);
+        }
+
+        return res;
+    }
+};
+```
+
+# 6. MySQL 中 CHAR 和 VARCHAR 的区别有哪些?
+* char 的长度是不可变的，用空格填充到指定长度大小，而 varchar 的长度是可变的。  
+* char 的存取速度还是比 varchar 快得多
+* char 的存储方式是：对英文字符占用 1 个字节，对一个汉字占用两个字节。varchar 的存储方式是：对每个英文字符占用 2 个字节，汉字也占用 2 个字节
+
+# 7. go 里面有协程，操作系统里面有进程和线程，简单说一下他们的区别
+1. 从操作系统层面，分线程和进程，在操作系统中没有协程的概念。进程是当前运行的整个程序，有自己的空间和数据资源。线程是进程的一部分，一个进程可以开很多个线程，但是这些线程都共享同一块内存地址。
+2. 协程是 go 提出来的概念，是 go 程序运行时维护的一个轻量级的线程，go 有 GMP 模型，G 是协程，M 是线程，P 调度机器。在程序运行的时候通过 p 把协程调度到 M 线程上去。线程执行完毕之后，会让 p 再调度新的协程到线程上运行。
+
+# 8. 爬楼梯
+https://leetcode.cn/problems/climbing-stairs/
+```cpp
+class Solution {
+public:
+    int climbStairs(int n) {
+        long long a1 = 0, a2 = 1;
+        for (int i = 1; i <= n; i ++) { long long temp = a1; a1 = a2; a2 += temp; }
+        return a2;
+    }
+};
+```
+
+# 9. 聚集索引和非聚集索引的区别是什么？
+聚集索引和非聚集索引的区别在于，通过聚集索引可以查到需要查找的数据，而通过非聚集索引可以查到记录对应的主键值，再使用主键的值通过聚集索引找到需要的数据。        
+聚集索引和非聚集索引的根本区别是表记录的排列顺序和与索引的排列顺序是否一致。        
+聚集索引的叶节点就是数据节点，而非聚集索引的叶节点仍然是索引节点，只不过其包含一个指向对应数据块的指针。        
+
+# 10. MySQL 常见的存储引擎 InnoDB、MyISAM 的使用场景分别是？
+### 区别
+1. 事务：MyISAM 不支持，InnoDB 支持
+2. 锁级别：MyISAM 表级锁，InnoDB 行级锁及外键约束
+3. MyISAM 存储表的总行数，InnoDB 不存储总行数
+4. MyISAM 采用非聚集索引，B+ 树叶子存储指向数据文件的指针。InnoDB 主键索引采用聚集索引，B+ 树叶子存储数据。
+
+### 使用场景
+MyISAM 适合：插入不频繁，查询非常频繁，如果执行大量的 select，MyISAM 是更好的选择，没有事务。           
+InnoDB 适合：可靠性要求比较高，或者要求事务，表更新和查询都相当的频繁，大量的 insert 或 update
+
+# 11. MySQL 常见的存储引擎 InnoDB、MyISAM 的使用场景分别是？
+### 区别
+1. 事务：MyISAM 不支持，InnoDB 支持
+2. 锁级别：MyISAM 表级锁，InnoDB 行级锁及外键约束
+3. MyISAM 存储表的总行数，InnoDB 不存储总行数
+4. MyISAM 采用非聚集索引，B+ 树叶子存储指向数据文件的指针。InnoDB 主键索引采用聚集索引，B+ 树叶子存储数据。
+
+### 使用场景
+MyISAM 适合：插入不频繁，查询非常频繁，如果执行大量的 select，MyISAM 是更好的选择，没有事务。           
+InnoDB 适合：可靠性要求比较高，或者要求事务，表更新和查询都相当的频繁，大量的 insert 或 update
+
+# 12. 你知道哪些数据库结构优化的手段？
+
+# 13. 可重复读和读提交有什么区别
+可重复读：在事务开始的那一刻视图已经固定，B 再改，A 看不到      
+读提交：A 的事务开始，B 事务提交 A 是可以看到的。
+
+# 14. 谈一下你理解的 binlog？
+
+# 15. 增加 B+ 树的路数可以降低树的高度，那么无限增加树的路数是不是可以有最优的查找效率？
+不可以。        
+因为这样会形成一个有序数组，文件系统和数据库的索引都是存在硬盘上的，并且如果数据量大的话，不一定能一次性加载到内存中。      
+有序数组没法一次性加载进内存，这时候 B+ 树的多路存储威力就出来了，可以每次加载 B+ 树的一个结点，然后一步步往下找。
+
+# 16. 加入你的电脑内存很小，要送一个海量数据库中读取数据，进行计算，有什么好的方法？
+
+# 17. 操作系统保护模式和实模式可以大致说说区别吗？
+
+# 18. 基类的虚函数表存放在内存的什么区，虚表指针 vptr 的初始化时间？
+虚函数表的特征：
+* 虚函数表是全局共享的元素，即全局仅有一个，在编译时就构造完成
+* 虚函数表类似一个数组，类对象中存储 vptr 指针，指向虚函数表，即虚函数不是函数，不是程序代码，不可能存储在代码段
+* 虚函数表存储虚函数的地址，即虚函数表的元素是指向类成员函数的指针，而类中虚函数的个数在编译时期可以确定，即虚函数表的大小可以确定，即大小是在编译使其确定的，不必动态分配内存空间存储虚函数表，所以不在堆中
+    
+虚表指针初始化时间：对该类进行实例化时，在构造函数执行时会对虚表指针进行初始化，并且存在对象内存布局的最前面    
+
+C++ 中虚函数表位于只读数据段，也就是 C++ 内存模型中的常量区；而虚函数则位于代码段，也就是 C++ 内存模型中的代码区
+
+# 19. 什么叫做野指针？什么叫做悬空指针？有什么区别？
+都是是指向无效内存区域的指针，访问行为将会导致未定义的行为。        
+野指针：没有被初始化过的指针        
+悬空指针：指针最初指向的内存已经被释放了的一种指针      
+
+# 20. 反转链表
+https://leetcode.cn/problems/fan-zhuan-lian-biao-lcof/
+```cpp
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* trainningPlan(ListNode* head) {
+        ListNode *ans = head, *last = nullptr;
+        while (head)
+        {
+            ListNode *next = head->next;
+            head->next = last;
+            last = head;
+            ans = head;
+            head = next;
+        }
+        return ans;
+    }
+};
+```
